# endlesstokens

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  config.example.toml  mise.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/eltk/: Cargo.toml
crates/eltk-adapters/: Cargo.toml
crates/eltk-adapters/src/: claude.rs  lib.rs
crates/eltk-adapters/tests/: claude_code.rs
crates/eltk-adapters/tests/fixtures/claude-code/: role-only-records.jsonl  usage-records.jsonl
crates/eltk-collector/: Cargo.toml
crates/eltk-collector/src/: dedup.rs  lib.rs  scan.rs
crates/eltk-core/: Cargo.toml
crates/eltk-core/src/: adapter.rs  context.rs  cost.rs  identity.rs  lib.rs  quality.rs  record.rs  source.rs  time.rs  usage.rs
crates/eltk-reporter/: Cargo.toml
crates/eltk-reporter/src/: lib.rs
crates/eltk-server/: Cargo.toml
crates/eltk-server/src/: lib.rs
crates/eltk-store/: Cargo.toml
crates/eltk-store/src/: lib.rs
crates/eltk/src/: main.rs
crates/eltk/tests/fixtures/scan-json/: expected-default.json  expected-include-excluded.json
crates/eltk/tests/fixtures/scan-json/claude/projects/example/: session.jsonl
docs/: development.md  scan-json.md
scripts/: check-third-party-notices.sh
