# SPDX-License-Identifier: MIT

[package]
name = "eltk-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "EndlessTokens agent transcript adapters."

[dependencies]
eltk-core = { path = "../eltk-core" }
serde_json = "1.0"
