# SPDX-License-Identifier: MIT

[package]
name = "eltk-reporter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "EndlessTokens report aggregation and rendering."

[dependencies]
eltk-core = { path = "../eltk-core" }
eltk-store = { path = "../eltk-store" }
