# SPDX-License-Identifier: MIT

[package]
name = "eltk-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "EndlessTokens self-hostable ingest and query server."

[dependencies]
eltk-core = { path = "../eltk-core" }
