# SPDX-License-Identifier: MIT

[package]
name = "eltk-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "EndlessTokens local storage layer."

[dependencies]
eltk-core = { path = "../eltk-core" }
