# SPDX-License-Identifier: MIT

[package]
name = "eltk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "EndlessTokens command-line interface."

[dependencies]
eltk-collector = { path = "../eltk-collector" }
eltk-core = { path = "../eltk-core" }
